--- a/templates/start.html
+++ b/templates/start.html
@@ -9,8 +9,14 @@
 
 </head>
 <body>
+
+<div class="a">
+	<h1>Данный сайт - это проект для предпрофессиональной олимпиады. Не вводите настоящие ваши данные!!!</h1>
+</div>
+<div class="b">
 	<form action="{{ url_for('input_danes') }}" method="get">
 		<input class="Button" type="submit" name="" value="Вход">
 	</form>
+</div>
 </body>
 </html>
